# android-fault-visualizer

./: .gitignore  AGENTS.md  LICENSE.md  README.md  compare.ipynb  faults.py  ftrace.config  process.py  pyproject.toml  requirements.in  trace.sh  user_page_faults.sql  utilities.py  visualization.py  visualizations.ipynb
docs/: example.md  how-it-works.md
example/: README.md  faults.csv  file_sizes.csv  mapped_faults.csv  maps.txt  user_page_faults.csv
example/post-ordering/: faults.csv  file_sizes.csv  mapped_faults.csv  maps.txt
example/pre-ordering/: faults.csv  file_sizes.csv  mapped_faults.csv  maps.txt
scripts/: format.sh
